<resources>
    <string name="app_name">AndroidOpengGlTutorials</string>



    <string name="type_draw">绘制形体</string>
    <string name="type_texture">图片处理</string>
    <string name="type_vary">图形变换</string>
    <string name="type_camera">相机</string>
    <string name="type_animation">压缩纹理动画</string>
    <string name="type_fbo">FBO使用</string>
    <string name="type_egl">EGL后台处理图片</string>
    <string name="type_obj">3D Obj模型</string>
    <string name="type_obj2">Obj+mtl模型</string>


    <string name="shape_selected">选择一个图形</string>
    <string name="shape_triangle">三角形</string>
    <string name="shape_cube">正方体</string>
    <string name="shape_texture">纹理正方体</string>
    <string name="shape_lighting_cube">光照正方体</string>



</resources>
