<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_draw"
                    android:id="@+id/btDraw" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PreviewTestActivity"
                    android:textAllCaps="false"
                    android:id="@+id/btTexture" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="Native预览 NativePreviewActivity"
                    android:id="@+id/native_preview" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CameraPreviewActivity"
                    android:textAllCaps="false"
                    android:id="@+id/btCamera" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/type_animation"
                    android:id="@+id/btAni" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/type_fbo"
                    android:id="@+id/btFbo" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/type_egl"
                    android:id="@+id/btEgl" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/type_obj"
                    android:id="@+id/btObj"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="手动绘制"
                    android:id="@+id/drawFrame"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>